--- a/ClientRespondentMs/src/main/resources/application.properties
+++ b/ClientRespondentMs/src/main/resources/application.properties
@@ -16,3 +16,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL82Dialect
 spring.jpa.show-sql=true
 
+
+#service name
+spring.application.name=respondent-service
+   
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
+
