--- a/ClientSurveyorMs/src/main/resources/application.properties
+++ b/ClientSurveyorMs/src/main/resources/application.properties
@@ -14,3 +14,8 @@ spring.datasource.password=5599
 spring.jpa.hibernate.ddl-auto=update 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL82Dialect
 spring.jpa.show-sql=true
+
+#service name
+spring.application.name=surveyor-service
+   
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
