--- a/ClientAdminMs-1/src/main/resources/application.properties
+++ b/ClientAdminMs-1/src/main/resources/application.properties
@@ -15,3 +15,11 @@ spring.datasource.password=5599
 spring.jpa.hibernate.ddl-auto=update 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL82Dialect
 spring.jpa.show-sql=true
+
+
+
+#service name
+spring.application.name=admin-service
+   
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
+
