--- a/ClientSurveyorMs/pom.xml
+++ b/ClientSurveyorMs/pom.xml
@@ -16,6 +16,8 @@
 	<description>surveyor</description>
 	<properties>
 		<java.version>1.8</java.version>
+		<spring-cloud.version>2020.0.2</spring-cloud.version>
+		
 	</properties>
 	<dependencies>
 		<dependency>
@@ -38,6 +40,12 @@
 <artifactId>springfox-swagger2</artifactId>
 <version>2.7.0</version>
 </dependency>
+
+	<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
+
 
 
 
@@ -63,6 +71,21 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>${spring-cloud.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
+
 
 	<build>
 		<plugins>
