--- a/ClientSurveyMs/src/main/resources/application.properties
+++ b/ClientSurveyMs/src/main/resources/application.properties
@@ -21,3 +21,15 @@ spring.jpa.show-sql=true
 spring.application.name=survey-service
    
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
+
+
+info.name=Survey Actuator
+info.more.detail: Welcome to survey actuator
+
+#define own username & password for security
+security.basic.enabled=true
+spring.security.user.name=user
+spring.security.user.password=password
+
+management.endpoints.web.exposure.include= *
+
