--- a/ClientAdminMs-1/src/main/resources/application.properties
+++ b/ClientAdminMs-1/src/main/resources/application.properties
@@ -23,3 +23,14 @@ spring.application.name=admin-service
    
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
 
+
+
+info.name=Admin Actuator
+info.more.detail: Welcome to admin actuator
+
+#define own username & password for security
+security.basic.enabled=true
+spring.security.user.name=user
+spring.security.user.password=password
+
+management.endpoints.web.exposure.include= *
