--- a/ClientRespondentMs/pom.xml
+++ b/ClientRespondentMs/pom.xml
@@ -48,6 +48,12 @@
 		</dependency>
 
 
+<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
