--- a/ClientRespondentMs/src/main/resources/application.properties
+++ b/ClientRespondentMs/src/main/resources/application.properties
@@ -22,3 +22,14 @@ spring.application.name=respondent-service
    
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
 
+
+
+info.name=Respondent Actuator
+info.more.detail: Welcome to respondent actuator
+
+#define own username & password for security
+security.basic.enabled=true
+spring.security.user.name=user
+spring.security.user.password=password
+
+management.endpoints.web.exposure.include= *
