--- a/ClientSurveyorMs/src/main/resources/application.properties
+++ b/ClientSurveyorMs/src/main/resources/application.properties
@@ -19,3 +19,16 @@ spring.jpa.show-sql=true
 spring.application.name=surveyor-service
    
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
+
+
+
+info.name=Surveyor Actuator
+info.more.detail: Welcome to surveyor actuator
+
+#define own username & password for security
+security.basic.enabled=true
+spring.security.user.name=user
+spring.security.user.password=password
+
+management.endpoints.web.exposure.include= *
+
